--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-	"name": "dunningBot",
-	"version": "0.0.1",
+	"name": "DunningBot",
+	"version": "1.0.0",
 	"main": "index.mjs",
 	"type": "module",
 	"scripts": {
 		"start": "nodemon index.mjs"
 	},
 	"dependencies": {
-		"axios": "^1.7.7",
 		"discord.js": "^14.16.3",
 		"dotenv": "^16.4.5",
 		"mongodb": "^6.10.0",
-		"mongoose": "^8.8.0"
+		"mongoose": "^8.8.0",
+		"node-cron": "^3.0.3"
 	},
 	"devDependencies": {
-		"nodemon": "^3.1.7",
-		"axios": "^1.7.7",
 		"discord.js": "^14.16.3",
 		"dotenv": "^16.4.5",
+		"eslint": "^9.20.1",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-prettier": "^5.2.3",
 		"mongodb": "^6.10.0",
-		"mongoose": "^8.8.0"
+		"mongoose": "^8.8.0",
+		"nodemon": "^3.1.7",
+		"prettier": "^3.5.1"
 	}
 }
